--- a/src/style/public.less
+++ b/src/style/public.less
@@ -11,3 +11,9 @@
   z-index: 4;
   text-align: left;
 }
+
+.main-content-title {
+  border-left: 3px solid @blue;
+  text-indent: 10px;
+  line-height: 1;
+}
